Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
See the end for copying conditions.

* Version 1.12 (unreleased)

** doc: Modernize doxygen configuration.

** API and ABI is backwards compatible with the previous version.

* Version 1.11 (released 2008-10-28)

** libidn: New WARN_CFLAGS configure variable.
It is used internally to add -Werror and other warnings flags, to
catch coding mistakes before releases.

** Win32: Perl is no longer required to build Libidn in Visual Studio.

** Win32: Functions in idna.h are also exported.
Reported by Adam Strzelecki <adam.strzelecki@java.pl>.

** doc: Included cyclomatic code complexity charts of the library code.
See doc/cyclo/.

** tests: Add more self-tests to get more self-test code coverage.

** tests: New 'make coverage' command to generate code coverage reports.
The output is created in doc/coverage/.  Requires the LCOV tools.  See
http://www.gnu.org/software/libidn/coverage/ for a pre-generated copy.

** Clarify copyright and license for gdoc, man pages, and C# port.

** Update gnulib files and translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.10 (released 2008-08-27)

** idn: accept -n as short form for --nfkc.
Before '-k' was used as the short form, but all documentation has said
'-n'.  We now accept both short forms, and -n remains the documented
short form.  Reported by John McGowan <jmcgowan@inch.com> in
<http://lists.gnu.org/archive/html/help-libidn/2008-08/msg00000.html>.

** Fix compiler warnings.

** Update gnulib files.

** Update translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.9 (released 2008-07-01)

** idn: fix error message when NFKC fails, and some other translation fixes.
Reported by Benno Schulenberg <coordinator@translationproject.org>.
