@@ -6,6 +6,8 @@ See the end for copying conditions.
 
 ** doc: Modernize doxygen configuration.
 
+** doc: Change license on the manual to GFDLv1.3+.
+
 ** API and ABI is backwards compatible with the previous version.
 
 * Version 1.11 (released 2008-10-28)
